--- a/new-react-app/src/App.css
+++ b/new-react-app/src/App.css
@@ -12,4 +12,60 @@ body {
 
 .container{
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5px;
+  gap: 10px;
+}
+
+.add-container{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.info-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 5px;
+}
+
+.dropdown{
+  position: relative;
+  display: inline-block;
+}
+.dropdown-btn{
+  padding: 10px;
+  border: 1px solid #ccc;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
+  /* background-color: #fff; */
+}
+
+.dropdown-content{
+  display: none;
+  position: absolute;
+  /* background-color: white; */
+  border: 1px solid #ccc;
+  max-width: 200px;
+  overflow-y: auto;
+  width: 100%;
+  /* z-index: 1; */
+}
+
+.dropdown-content label{
+  display: block;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.dropdown-content label:hover{
+  /* background-color: #f0f0f0; */
+}
+
+.show{
+  display: block;
 }
